<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mybooks.app.ui.detail.DetailViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.detail.DetailFragment">

        <include
            layout="@layout/layout_toolbar_detail"
            app:clickListener="@{clickListener}"
            app:viewModel="@{viewModel}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                tools:context=".ui.detail.DetailFragment">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_book_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:background="@color/colorThumbnailBg"
                    android:scaleType="fitXY"
                    app:imageUrl="@{viewModel.document.thumbnail}"
                    app:layout_constraintDimensionRatio="w,120:178"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_book_title"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.document.title}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_book_thumbnail"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="책 제목입니다.\n책 제목입니다.\n책 제목입니다." />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_book_authors"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    app:bookAuthors="@{viewModel.document.authors}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_book_thumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
                    tools:text="저자명입니다." />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_book_sale_price"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@{@string/format_sale_price(viewModel.document.salePrice)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_book_thumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_book_authors"
                    tools:text="23,500원" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_book_detail"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_book_detail"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_book_thumbnail" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_book_detail"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@{viewModel.document.contents}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_book_detail"
                    tools:text="책 설명입니다." />

                <View
                    android:id="@+id/view_line2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorThumbnailBg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_book_detail" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_book_info"
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_book_info"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_line2" />

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_book_info">

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_publisher" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@{viewModel.document.publisher}" />
                    </TableRow>

                    <TableRow android:layout_marginTop="4dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_isbn" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@{viewModel.document.isbn}" />
                    </TableRow>

                    <TableRow android:layout_marginTop="4dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_datetime" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            app:dateTimeText="@{viewModel.document.datetime}" />
                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>